fix layout bug for Main sections

--- a/src/sass/components/_FooterContact.scss
+++ b/src/sass/components/_FooterContact.scss
@@ -4,12 +4,13 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+  padding: 5rem;
 
   &--rate-punk {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
+    justify-content: space-evenly;
+    align-items: flex-start;
     height: 100%;
     width: 50%;
   }
@@ -17,7 +18,7 @@
   &--quick-links {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     height: 100%;
     width: 25%;
@@ -40,7 +41,7 @@
   &--social-media {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     height: 100%;
     width: 25%;
