--- a/src/sass/components/_FooterStore.scss
+++ b/src/sass/components/_FooterStore.scss
@@ -1,6 +1,7 @@
 .footer__store {
   background-color: #45565e;
-  border: 1px solid $color-black;
+  border-top: 1px solid $color-black;
+  border-bottom: 1px solid $color-black;
 
   display: flex;
   justify-content: center;
