--- a/src/sass/components/_MainSectionForm.scss
+++ b/src/sass/components/_MainSectionForm.scss
@@ -10,7 +10,7 @@
     padding: 5rem;
     margin: 5rem;
     width: 28rem;
-    height: 50rem;
+    height: fit-content;
 
     &--headline {
       font-size: 3.5rem;
@@ -62,6 +62,7 @@
       font-size: 1.3rem;
       color: $color-grey-dark;
       margin-top: 10.5rem;
+      margin-bottom: 1rem;
     }
   }
 }
